Fixed logo-img not showing, minimal style improvements..

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,3 @@
-navbar { margin-left: 50px; }
 
 .header-disney {
     float: left;
@@ -9,14 +8,47 @@ navbar { margin-left: 50px; }
 
 }
 
-.container-logo { width: 80px; }
-.container-logo img {width: 100%;}
+.header-disney navbar{
+    display: flex;
+    width: 100%;
+    margin-left: 10px;
+}
+.header-disney navbar .container-logo{
+    margin: 0px 20px;
+}
+.header-disney navbar ul {
+    display: flex;
+    margin: 0px 5px;
+    padding: 0;
+    list-style: none;
+    height: 100%;
+    align-items: center;
+}
 
-.header-disney navbar ul {margin: 0px;padding: 0;list-style: none;display: flex;height: 100%;align-items: center;}
+.header-disney navbar ul li { 
+    margin-right: 10px;
+ }
 
-.header-disney navbar ul li {margin-right: 10px;}
+.header-disney navbar ul li:hover {
+    /* A terminar... */
+    text-decoration: underline;
+    text-size-adjust: 20px;
+}
 
 .header-disney navbar ul li * {
     color: white;
     text-decoration: none;
 }
+
+.container-logo { 
+    width: 80px;
+    margin: 2px; 
+}
+
+.container-logo img { width: 100%; }
+
+
+/*----- ANIMATIONS -----*/
+
+
+  
